Added a card containing a list of Archived Projects

--- a/main/index.html
+++ b/main/index.html
@@ -21,7 +21,7 @@
                     <img class="card-img-top" src="http://www.alexeyelkin.com/images/sample.jpg" alt="Card image">
                     <div class="card-body">
                         <h4 class="card-title">N-body Simulation</h4>
-                        <p class="card-text">
+                        <p class="card-text project-text">
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                             Quisque volutpat ligula augue, in ultrices lectus sodales eget.
                             Suspendisse magna magna, rhoncus eu arcu et, euismod gravida urna.
@@ -41,7 +41,7 @@
                     <img class="card-img-top" src="http://www.alexeyelkin.com/images/sample.jpg" alt="Card image">
                     <div class="card-body">
                         <h4 class="card-title">N-body Simulation</h4>
-                        <p class="card-text">
+                        <p class="card-text project-text">
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                             Quisque volutpat ligula augue, in ultrices lectus sodales eget.
                             Suspendisse magna magna, rhoncus eu arcu et, euismod gravida urna.
@@ -61,7 +61,7 @@
                     <img class="card-img-top" src="http://www.alexeyelkin.com/images/sample.jpg" alt="Card image">
                     <div class="card-body">
                         <h4 class="card-title">N-body Simulation</h4>
-                        <p class="card-text">
+                        <p class="card-text project-text">
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                             Quisque volutpat ligula augue, in ultrices lectus sodales eget.
                             Suspendisse magna magna, rhoncus eu arcu et, euismod gravida urna.
@@ -79,6 +79,24 @@
         <!-- Tentacles -->
         <div class="row" id="row-2">
             <!-- First Card -->
+            <div class="col-xl-3">
+                <div class="card">
+                    <div class="card-body">
+                        <h2 class="card-title">Archives</h2>
+                        <p class="card-text">Here are some examples of work I have done in the past. These are all finished projects, ranging from 2015-2019</p>
+                        <div class="list-group">
+                            <a href="#" target="_blank" class="list-group-item list-group-item-action">Project 1</a>
+                            <a href="#" target="_blank" class="list-group-item list-group-item-action">Project 2</a>
+                            <a href="#" target="_blank" class="list-group-item list-group-item-action">Project 3</a>
+                            <a href="#" target="_blank" class="list-group-item list-group-item-action">Project 4</a>
+                            <a href="#" target="_blank" class="list-group-item list-group-item-action">Project 5</a>
+                            <a href="#" target="_blank" class="list-group-item list-group-item-action">Project 6</a>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+            <!-- Second Card -->
             <div class="col-xl-3">
                 <div class="card">
                     <div class="card-body">
