Added an "About" card

--- a/main/index.html
+++ b/main/index.html
@@ -119,6 +119,21 @@
                     </div>
                 </div>
             </div>
+            <!-- Second Card -->
+            <div class="col-xl-3">
+                <div class="card">
+                    <div class="card-body">
+                        <h2 class="card-title">About</h2>
+                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                            Duis consectetur, lacus id euismod volutpat, metus tellus mattis erat, a egestas velit massa at augue.
+                            Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.
+                            Nullam mauris ipsum, pellentesque quis suscipit quis, porttitor sed lacus. Ut pulvinar tellus nibh, et feugiat sem ornare et.
+                            Phasellus ante ligula, ornare a sollicitudin eget, facilisis in nisl. Praesent tempor faucibus odio, ac vulputate ipsum commodo vel.
+                            Aenean sollicitudin erat ac dui placerat imperdiet. Cras magna justo, lobortis sed hendrerit non, pulvinar in augue. Donec hendrerit mattis neque.
+                            Vestibulum non magna sit amet ipsum blandit elementum cursus feugiat dolor. Sed fringilla tristique efficitur. Aenean faucibus nibh a rhoncus commodo.</p>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
     <footer class="footer">
